fork-join pool + java active processors